kustomize/overlays/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: thinklabs-wp-admin
  labels:
    app: thinklabs-wp-admin-site-deployment
  name: thinklabs-wp-admin-site-deployment
spec:
  selector:
    matchLabels:
      app: thinklabs-wp-admin-site-deployment
  template:
    metadata:
      labels:
        app: thinklabs-wp-admin-site-deployment
    spec:
      volumes:
      - name: thinklabs-wp-admin-site-deployment-volume
        persistentVolumeClaim:
          claimName: thinklabs-wp-admin-site-claim
      containers:
        - image: 859856990833.dkr.ecr.us-east-2.amazonaws.com/carwash-blog:08092022
          name: thinklabs-wp-admin-site-deployment
          volumeMounts:
          - name: thinklabs-wp-admin-site-deployment-volume
            mountPath: /var/www/html
          ports:
          - containerPort: 80
            name: wordpress
          resources:
            requests:
              memory: 512Mi
              cpu: 500m
            limits:
              memory: 512Mi
              cpu: 500m
      restartPolicy: Always
