kustomize/overlays/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thinklabs-wp-site-svc
spec:
  type: ClusterIP
  selector:
    app: thinklabs-wp-site-deployment
  ports:
    - name: http
      port: 80
      targetPort: 80
