kustomize/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: thinklabs-blog
  name: thinklabs-blog-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/server-snippet: |
      more_set_headers "X-Forwarded-Proto: https";
      more_set_headers "use-forwarded-headers: true";

    # nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 8skills.co
        - www.8skills.co
      secretName: thinklab-io-tls
  rules:
    - host: 8skills.co
      http:
        paths:
          - path: /blog
            pathType: Prefix
            backend:
              service:
                name: thinklabs-blog-svc
                port:
                  number: 80
